{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 26,
  "lineage": "355b3efe-a4ed-f553-91bb-3c69dcd1642e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218323737322:vpc/vpc-0bcf336f9d41db6ae",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a8b62458a44a0b04",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd3aaa1cb0472403",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcf336f9d41db6ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059a31e1f40de9bbc",
            "owner_id": "218323737322"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218323737322:security-group/sg-08af33eec7d8fb394",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-08af33eec7d8fb394",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "218323737322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "Terraform",
              "Name": "allow_tls"
            },
            "tags_all": {
              "Deployment": "Terraform",
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcf336f9d41db6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218323737322:security-group-rule/sgr-0fd60561b7323d4e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0fd60561b7323d4e0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08af33eec7d8fb394",
            "security_group_rule_id": "sgr-0fd60561b7323d4e0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218323737322:security-group-rule/sgr-00ecdbe7776f01537",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow inbound traffic on port 443",
            "from_port": 443,
            "id": "sgr-00ecdbe7776f01537",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08af33eec7d8fb394",
            "security_group_rule_id": "sgr-00ecdbe7776f01537",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}